Update changelog for release.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@8994 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -178,6 +178,27 @@ hr {
 </div>
 
 <div id="pageBody">
+<h2>2.5.7 Beta 1 -- <span style="font-weight: normal;">August 23rd, 2007</span></h2>
+<h3>Bugs</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-829'>SPARK-829</a>] - XMPP URI not working in some cases.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-830'>SPARK-830</a>] - Fix start on startup issue with installer.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-831'>SPARK-831</a>] - XMPP URI not starting conversations when spark is not running.</li>
+</ul>
+
+<h2>2.5.6 -- <span style="font-weight: normal;">August 23rd, 2007</span></h2>
+<h3>Bugs</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-767'>SPARK-767</a>] - Fixed roster not populating offline users in their respective groups.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-807'>SPARK-807</a>] - Fixed sending of empty broadcast messages.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-810'>SPARK-810</a>] - Added in system tray for linux (requires Java 1.6)</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-811'>SPARK-811</a>] - Fixed spark not loading JMF Native libraries</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-813'>SPARK-813</a>] - Added GTalk and XMPP gateways.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-819'>SPARK-819</a>] - Fixed issue with file picker hanging spark.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-821'>SPARK-821</a>] - Fixed timestamps in conference rooms.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-823'>SPARK-823</a>] - Explicit loading of plugins no longer fails due to wrong classloader.</li>
+</ul>
+
 <h2>2.5.5 -- <span style="font-weight: normal;">August 5th, 2007</span></h2>
 <h3>Bugs</h3>
 <ul>
