--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -184,6 +184,7 @@ hr {
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-829'>SPARK-829</a>] - XMPP URI not working in some cases.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-830'>SPARK-830</a>] - Fix start on startup issue with installer.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-831'>SPARK-831</a>] - XMPP URI not starting conversations when spark is not running.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-832'>SPARK-832</a>] - Offline messages not showing up in certain situations.</li>
 </ul>
 
 <h2>2.5.6 -- <span style="font-weight: normal;">August 23rd, 2007</span></h2>
