Updating Spark changelog and readme.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9126 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -178,13 +178,30 @@ hr {
 </div>
 
 <div id="pageBody">
-<h2>2.5.7 Beta 1 -- <span style="font-weight: normal;">August 23rd, 2007</span></h2>
+<h2>2.5.7 -- <span style="font-weight: normal;">August 20th, 2007</span></h2>
 <h3>Bugs</h3>
 <ul>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-829'>SPARK-829</a>] - XMPP URI not working in some cases.</li>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-830'>SPARK-830</a>] - Fix start on startup issue with installer.</li>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-831'>SPARK-831</a>] - XMPP URI not starting conversations when spark is not running.</li>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-832'>SPARK-832</a>] - Offline messages not showing up in certain situations.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-782'>SPARK-782</a>] - Fixed system tray with limited users and on linux.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-818'>SPARK-818</a>] - Improvements to reconnection code.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-825'>SPARK-825</a>] - Fixed sip stack sending superfluous REGISTER Packet</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-827'>SPARK-827</a>] - Fixed limited users issue.l</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-829'>SPARK-829</a>] - Fixed XMPP URI in registry.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-830'>SPARK-830</a>] - Fixed start on startup issue with installer.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-831'>SPARK-831</a>] - Fixed XMPP URI not starting conversations when spark is not running.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-832'>SPARK-832</a>] - Fixed offline messages not showing up in certain situations.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-833'>SPARK-833</a>] - Fixed bad MSI installer.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-834'>SPARK-834</a>] - Upgraded to the latest SMACK.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-836'>SPARK-836</a>] - JNIWrapper is now being included with the linux distro.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-838'>SPARK-838</a>] - Fixed gateway issue on initial roster loading.pear.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-839'>SPARK-839</a>] - Fixed loading of spark in system tray.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-840'>SPARK-840</a>] - Added chinese translation to Spark</li>
+</ul>
+
+
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-792'>SPARK-792</a>] - Add Language Selection to Spark Installation</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-846'>SPARK-846</a>] - Allow option to show avatars in Contact List.</li>
 </ul>
 
 <h2>2.5.6 -- <span style="font-weight: normal;">August 23rd, 2007</span></h2>
