Updating changelog and readme for 2.5.8 beta 1 release.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9283 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -178,7 +178,18 @@ hr {
 </div>
 
 <div id="pageBody">
-<h2>2.5.7 -- <span style="font-weight: normal;">August 20th, 2007</span></h2>
+<h2>2.5.8 Beta 1 -- <span style="font-weight: normal;">October 5th, 2007</span></h2>
+<h3>Bugs</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-618'>SPARK-618</a>] - Fixed multiple message issue with Broadcast.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-857'>SPARK-857</a>] - Fixed language selection menu is not displaying.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-860'>SPARK-860</a>] - Show offline users in broadcast window.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-855'>SPARK-855</a>] - Allow mainWindowHeight to have low values.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-856'>SPARK-856</a>] - Update avatar size in contact list.</li>
+</ul>
+
+<div id="pageBody">
+<h2>2.5.7 -- <span style="font-weight: normal;">September 20th, 2007</span></h2>
 <h3>Bugs</h3>
 <ul>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-782'>SPARK-782</a>] - Fixed system tray with limited users and on linux.</li>
