--- a/documentation/README.html
+++ b/documentation/README.html
@@ -166,11 +166,11 @@ hr {
 <table boder=0>
 <tr>
 	<td align="right">version:</td>
-	<td><b>2.5.8 Beta 1</b></td>
+	<td><b>2.5.8</b></td>
 </tr>
     <tr>
 	<td align="right">released:</td>
-	<td><b>October 5th, 2007</b></td>
+	<td><b>October 31st, 2007</b></td>
 </tr>
 </table>
 
