Updated changelog for 2.5.8.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9432 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -185,8 +185,16 @@ hr {
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-857'>SPARK-857</a>] - Fixed language selection menu is not displaying.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-860'>SPARK-860</a>] - Show offline users in broadcast window.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-855'>SPARK-855</a>] - Allowed mainWindowHeight to have low values.</li>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-856'>SPARK-856</a>] - Updated avatar size in contact list.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-869'>SPARK-869</a>] - Gateway icons are now lightning up properly.</li>
 <li>SIP Phone plugin is now open source.</li>
+</ul>
+
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-820'>SPARK-820</a>] - Empty roster items now show jid instead of blank.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-856'>SPARK-856</a>] - Updated avatar size in contact list, also selectable from three choices.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-867'>SPARK-867</a>] - GaduGadu, IRC, and SIMPLE transports now supported.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-868'>SPARK-868</a>] - Entire status message now displayed with word/line wrapping on tooltip.</li>
 </ul>
 
 <div id="pageBody">
