Couple of documentation updates for 2.5.8 release.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9435 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/LICENSE.html
+++ b/documentation/LICENSE.html
@@ -469,6 +469,6 @@ FAILURE OF THE LIBRARY TO OPERATE WITH ANY OTHER SOFTWARE), EVEN IF
 SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH
 DAMAGES.
 
-
+ </pre>
  </body>
  </html>
