--- a/documentation/sparkplug_dev_guide.html
+++ b/documentation/sparkplug_dev_guide.html
@@ -189,8 +189,7 @@ To setup a project to run Spark within your IDE, you will need to the following:
 <li>That's it. 
 
 </ul>
-<p>We have also provided a build structure to easily build and deploy your own plugins directly into your Spark test bed. To use, read the <a href="builder/how-to-build.txt"> file in the builder/ directory.</p>
-</p>
+<p>We have also provided a build structure to easily build and deploy your own plugins directly into your Spark test bed. To use, read the <a href="builder/how-to-build.txt">how-to-build.txt</a> file in the builder/ directory.</p>
 
 
 <h3><a id="examples">Spark How-To's</a></h3>
@@ -1027,10 +1026,6 @@ public class MyPreferenceUI extends JPanel {
 </pre>
 
 </fieldset>
-
-</td></tr>
-</tbody>
-</table>
 
 </body>
 </html>
