Updated changelog for release
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9490 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -187,6 +187,7 @@ hr {
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-855'>SPARK-855</a>] - Allowed mainWindowHeight to have low values.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-869'>SPARK-869</a>] - Gateway icons are now lightning up properly.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-870'>SPARK-870</a>] - Window positions/sizes are being saved upon window close now.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-874'>SPARK-874</a>] - Spark is now able to handle the new conference search capability of Openfire 3.4.1</li>
 <li>SIP Phone plugin is now open source.</li>
 </ul>
 
