Updated release dates for Spark 2.5.8.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9501 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/README.html
+++ b/documentation/README.html
@@ -170,7 +170,7 @@ hr {
 </tr>
     <tr>
 	<td align="right">released:</td>
-	<td><b>October 31st, 2007</b></td>
+	<td><b>November 14th, 2007</b></td>
 </tr>
 </table>
 
@@ -238,7 +238,7 @@ omitted.
 
 
 	<div class="footer">
-	Copyright &copy; Jive Software, 2006
+	Copyright &copy; Jive Software, 2006-2007
 	</div>
 
 
