--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -178,8 +178,17 @@ hr {
 </div>
 
 <div id="pageBody">
-<h2>2.5.8 -- <span style="font-weight: normal;">October 31st, 2007</span></h2>
-<h3>Bugs</h3>
+<h2>2.5.8 -- <span style="font-weight: normal;">November 14th, 2007</span></h2>
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-820'>SPARK-820</a>] - Empty roster items now show jid instead of blank.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-856'>SPARK-856</a>] - Updated avatar size in contact list, also selectable from three choices.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-867'>SPARK-867</a>] - GaduGadu, IRC, and SIMPLE transports now supported.</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-868'>SPARK-868</a>] - Entire status message now displayed with word/line wrapping on tooltip.</li>
+<li>SIP Phone plugin is now open source.</li>
+</ul>
+
+<h3>Bug Fixes</h3>
 <ul>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-618'>SPARK-618</a>] - Fixed multiple message issue with Broadcast.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-857'>SPARK-857</a>] - Fixed language selection menu is not displaying.</li>
@@ -188,19 +197,16 @@ hr {
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-869'>SPARK-869</a>] - Gateway icons are now lightning up properly.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-870'>SPARK-870</a>] - Window positions/sizes are being saved upon window close now.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-874'>SPARK-874</a>] - Spark is now able to handle the new conference search capability of Openfire 3.4.1</li>
-<li>SIP Phone plugin is now open source.</li>
-</ul>
-
-<h3>New Features</h3>
-<ul>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-820'>SPARK-820</a>] - Empty roster items now show jid instead of blank.</li>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-856'>SPARK-856</a>] - Updated avatar size in contact list, also selectable from three choices.</li>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-867'>SPARK-867</a>] - GaduGadu, IRC, and SIMPLE transports now supported.</li>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-868'>SPARK-868</a>] - Entire status message now displayed with word/line wrapping on tooltip.</li>
 </ul>
 
 <h2>2.5.7 -- <span style="font-weight: normal;">September 20th, 2007</span></h2>
-<h3>Bugs</h3>
+<h3>New Features</h3>
+<ul>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-792'>SPARK-792</a>] - Add Language Selection to Spark Installation</li>
+<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-846'>SPARK-846</a>] - Allow option to show avatars in Contact List.</li>
+</ul>
+
+<h3>Bug Fixes</h3>
 <ul>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-782'>SPARK-782</a>] - Fixed system tray with limited users and on linux.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-818'>SPARK-818</a>] - Improvements to reconnection code.</li>
@@ -218,14 +224,8 @@ hr {
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-840'>SPARK-840</a>] - Added chinese translation to Spark</li>
 </ul>
 
-<h3>New Features</h3>
-<ul>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-792'>SPARK-792</a>] - Add Language Selection to Spark Installation</li>
-<li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-846'>SPARK-846</a>] - Allow option to show avatars in Contact List.</li>
-</ul>
-
 <h2>2.5.6 -- <span style="font-weight: normal;">August 23rd, 2007</span></h2>
-<h3>Bugs</h3>
+<h3>Bug Fixes</h3>
 <ul>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-767'>SPARK-767</a>] - Fixed roster not populating offline users in their respective groups.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-807'>SPARK-807</a>] - Fixed sending of empty broadcast messages.</li>
@@ -238,7 +238,7 @@ hr {
 </ul>
 
 <h2>2.5.5 -- <span style="font-weight: normal;">August 5th, 2007</span></h2>
-<h3>Bugs</h3>
+<h3>Bug Fixes</h3>
 <ul>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-719'>SPARK-719</a>] - Fixed communication time in Phone.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-755'>SPARK-755</a>] - Fixed Spark crash after login with latest jvm build 1.6.0_01-b06</li>
@@ -256,7 +256,7 @@ hr {
 </ul>
 
 <h2>2.5.4 Beta 1 -- <span style="font-weight: normal;">June 11th, 2007</span></h2>
-<h3>Bugs</h3>
+<h3>Bug Fixes</h3>
 <ul>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-759'>SPARK-759</a>] - Fixed File transfer issue on Mac OSX.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-763'>SPARK-763</a>] - Moving all native code to plugin for better linux support.</li>
@@ -269,7 +269,7 @@ hr {
 
 <h2>2.5.3 Beta 2 -- <span style="font-weight: normal;">May 28th, 2007</span></h2>
 
-<h3>Bugs</h3>
+<h3>Bug Fixes</h3>
 <ul>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-748'>SPARK-748</a>] - Ctrl-f does not pick up different users with same contact name.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-753'>SPARK-753</a>] - FRAME_IMAGE not found</li>
@@ -290,7 +290,7 @@ hr {
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-735'>SPARK-735</a>] - Added integrated sso - smack code into Spark.</li>
 </ul>
 
-<h3>Bugs</h3>
+<h3>Bug Fixes</h3>
 <ul>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-718'>SPARK-718</a>] - Fixed small asterisk-IM issue.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-732'>SPARK-732</a>] - Fixed conference room participant list issue when renaming nickname.</li>
@@ -316,7 +316,7 @@ hr {
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-701'>SPARK-701</a>] - Added Japanese translation.</li>
 </ul>
 
-<h3>Bugs</h3>
+<h3>Bug Fixes</h3>
 <ul>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-598'>SPARK-598</a>] - MSI now supports automatic upgrades.</li>
 <li>[<a href='http://www.igniterealtime.org/issues/browse/SPARK-626'>SPARK-626</a>] - Added in missing jars to classpath on linux.</li>
@@ -775,7 +775,7 @@ hr {
 </ul>
 
 <div class="footer">
-    Copyright &copy; Jive Software, 2006
+    Copyright &copy; Jive Software, 2006-2007
 </div>
 
 
