Tons of plugin code cleanup, including adding plugins to intellij configs. [SPARK-912] Incorporated patches submitted for a wealth of localization improvements, also includes new confirmation when clearing transcript, ability to globally override spark properties, and ability to disable or change spark update check frequency.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@9710 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/linux/changelog.html
+++ b/src/plugins/linux/changelog.html
@@ -28,12 +28,12 @@
         }
 
         TT {
-            font-family : courier new;
+            font-family : courier new, serif;
             font-weight : bold;
             color : #060;
         }
         PRE {
-            font-family : courier new;
+            font-family : courier new, serif;
             font-size : 100%;
         }
     </style>
