--- a/src/plugins/transferguard/changelog.html
+++ b/src/plugins/transferguard/changelog.html
@@ -28,12 +28,12 @@
         }
 
         TT {
-            font-family : courier new;
+            font-family : courier new, serif;
             font-weight : bold;
             color : #060;
         }
         PRE {
-            font-family : courier new;
+            font-family : courier new, serif;
             font-size : 100%;
         }
     </style>
