--- a/src/plugins/translator/readme.html
+++ b/src/plugins/translator/readme.html
@@ -27,12 +27,12 @@
         }
 
         TT {
-            font-family : courier new;
+            font-family : courier new, serif;
             font-weight : bold;
             color : #060;
         }
         PRE {
-            font-family : courier new;
+            font-family : courier new, serif;
             font-size : 100%;
         }
         #datatable TH {
@@ -42,9 +42,6 @@
         }
         #datatable TD {
             background-color : #FAF6EF;
-        }
-        #datatable .name {
-            background-color : #DCE2F5;
         }
     </style>
 </head>
