--- a/documentation/README.html
+++ b/documentation/README.html
@@ -166,11 +166,11 @@ hr {
 <table border=0>
 <tr>
 	<td align="right">version:</td>
-	<td><b>2.6.0</b></td>
+	<td><b>2.6.0 Beta 1</b></td>
 </tr>
     <tr>
 	<td align="right">released:</td>
-	<td><b>November 14th, 2007</b></td>
+	<td><b>June 13th, 2008</b></td>
 </tr>
 </table>
 
