--- a/src/plugins/translator/changelog.html
+++ b/src/plugins/translator/changelog.html
@@ -43,6 +43,11 @@
 <h1>
 Translator Spark plug Changelog
 </h1>
+<p><b>1.4</b> -- March 17th, 2011</p>
+<ul>
+    <li>Adjusted to Google's new translator layout for Spark 2.6.x</li>
+</ul>
+
 <p><b>1.3</b> -- February 7th, 2007</p>
 <ul>
     <li>Fixed issue with Spark 2.5 Beta and Higher</li>
