--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -178,6 +178,65 @@ hr {
 </div>
 
 <div id="pageBody">
+<h2>2.6.0 -- <span style="font-weight: normal;">May 6th, 2011</span></h2>
+<h3>New Features</h3>
+<ul>
+<li>Customizable Look and Feel</li>
+<li>Customizable Colors</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-915'>SPARK-915</a>] - ctrl-Space completion of conference room nicknames</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1035'>SPARK-1035</a>] - Add ability to have an invisible presence</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1103'>SPARK-1103</a>] - Add an option to register with conference room</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1105'>SPARK-1105</a>] - Spark indicates different permissions in MUC with additional icons</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1202'>SPARK-1202</a>] - Numerical message notification in Mac OS X </li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1208'>SPARK-1208</a>] - changed default filetransfer save path</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1210'>SPARK-1210</a>] - Emphasize rooms that user don't have access to in the rooms list</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1285'>SPARK-1285</a>] - ServerMessage display reworked</li>
+<li>and many more...</li>
+</ul>
+<h3>Bug Fixes</h3>
+<ul>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-772'>SPARK-772</a>] - registration / JID escaping</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-777'>SPARK-777</a>] - Hidden Empty Groups do not become visible </li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-824'>SPARK-824</a>] - Group Chat Messages from blocked users are displayed in the Toast Popup</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-892'>SPARK-892</a>] - automatically reconnect to chatrooms after a reconnection</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-994'>SPARK-994</a>] - Bookmarks menu is not refreshing immediately</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1020'>SPARK-1020</a>] - Spark shows wrong popup upon receiving group chat invitation </li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1068'>SPARK-1068</a>] - Spark is not reacting to outside keyboard events when setting the auto Away status</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1069'>SPARK-1069</a>] - Spark continuos flashing continues to flash after the chat window gets focus</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1112'>SPARK-1112</a>] - Minor visual issues with history cleaning</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1116'>SPARK-1116</a>] - Private chat history in MUC was not displayed, but now is add checkstyle to check the Sun Code Conventions</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1121'>SPARK-1121</a>] - Should be a way to copy URL without selecting the whole URL text </li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1153'>SPARK-1153</a>] - Wrong contacts count on reconnect</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1161'>SPARK-1161</a>] - Set a default minimum size of a tab</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1161'>SPARK-1161</a>] - added a gap between presence, user and close button  </li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1172'>SPARK-1172</a>] - Flashing and spellchecker reworked</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1183'>SPARK-1183</a>] - Spellchecker is not working normally</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1183'>SPARK-1183</a>] - Updated to newest jmyspellto fix Windows 7 issues</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1190'>SPARK-1190</a>] - Alert when user is available should open a new chat window </li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1190'>SPARK-1190</a>] - show Toaster/bring window to Front when enabled in preference menu</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1209'>SPARK-1209</a>] - Agent names are missing in Fastpath Online Agents tab</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1213'>SPARK-1213</a>] - Spark duplicates rooms in the conference browser when hitting Refresh button fast</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1229'>SPARK-1229</a>] - RosterManagement Fixes, contacts presence after reconnection</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/Spark-1233'>SPARK-1233</a>] - Mouse Click on Avatar in VCard Preview opens another VCard Preview</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1240'>SPARK-1240</a>] - saves if contactlist should show empty groups</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1241'>SPARK-1241</a>] - UiCreation in dispatch thread</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1242'>SPARK-1242</a>] - Group disappears after a rename.</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1244'>SPARK-1244</a>] - MacOSX 10.6 support</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1249'>SPARK-1249</a>] - Privacy Plugin fixes</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1250'>SPARK-1250</a>] - Scroll Bar behaviour</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1251'>SPARK-1251</a>] - Privacy Plugin fixes</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1252'>SPARK-1252</a>] - Privacy Plugin fixes</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1256'>SPARK-1256</a>] - removed & from check for updates menuentry and added KeyListener</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1257'>SPARK-1257</a>] - Look and Feel Changes </li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1258'>SPARK-1258</a>] - Skin customization/default value setting </li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1266'>SPARK-1266</a>] - Fix Spark offline systray icon</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1268'>SPARK-1268</a>] - Cursor changes to hand after sending a message</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1273'>SPARK-1273</a>] - Option "Stay on Top" is not stored in preferences</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1280'>SPARK-1280</a>] - Crtl-Backspace doe not work in Chat Windows</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1286'>SPARK-1286</a>] - could not open chatframe from search dialog, when there is no contactitem for this contact</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1295'>SPARK-1295</a>] - Left menu panel in Preferences gets squeezed</li>
+</ul>
+
 <h2>2.5.8 -- <span style="font-weight: normal;">November 14th, 2007</span></h2>
 <h3>New Features</h3>
 <ul>
