license and readme updates
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12393 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/LICENSE.html
+++ b/documentation/LICENSE.html
@@ -8,7 +8,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=Generator content="Microsoft Word 11">
 <meta name=Originator content="Microsoft Word 11">
 <link rel=File-List href="LICENSE-Dateien/filelist.xml">
-<title>Spark License: LGPL</title>
+<title>Spark License: Apache License 2.0</title>
 <!--[if gte mso 9]><xml>
  <o:DocumentProperties>
   <o:Author>wolf.posdorfer</o:Author>
