--- a/documentation/README.html
+++ b/documentation/README.html
@@ -266,8 +266,7 @@ href="LICENSE.html"><span style='color:white'>License</span></a> <o:p></o:p></sp
   style='font-size:10.0pt;font-family:Arial'>version:<o:p></o:p></span></p>
   </td>
   <td style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=MsoNormal><b><span style='font-size:10.0pt;font-family:Arial'>2.6.0
-  Beta 1</span></b><span style='font-size:10.0pt;font-family:Arial'><o:p></o:p></span></p>
+  <p class=MsoNormal><b><span style='font-size:10.0pt;font-family:Arial'>2.6.0</span></b><span style='font-size:10.0pt;font-family:Arial'><o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:1;mso-yfti-lastrow:yes'>
@@ -276,8 +275,8 @@ href="LICENSE.html"><span style='color:white'>License</span></a> <o:p></o:p></sp
   style='font-size:10.0pt;font-family:Arial'>released:<o:p></o:p></span></p>
   </td>
   <td style='padding:.75pt .75pt .75pt .75pt'>
-  <p class=MsoNormal><b><span style='font-size:10.0pt;font-family:Arial'>June
-  13th, 2008</span></b><span style='font-size:10.0pt;font-family:Arial'><o:p></o:p></span></p>
+  <p class=MsoNormal><b><span style='font-size:10.0pt;font-family:Arial'>May
+  19th, 2011</span></b><span style='font-size:10.0pt;font-family:Arial'><o:p></o:p></span></p>
   </td>
  </tr>
 </table>
