updating changelog and readme for 2.6.1
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12476 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -178,6 +178,56 @@ hr {
 </div>
 
 <div id="pageBody">
+<h2>2.6.1 -- <span style="font-weight: normal;">June 20th, 2011</span></h2>
+<h3> New Feature </h3>
+<ul>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-884'>SPARK-884</a>] - OTR support for chat</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-948'>SPARK-948</a>] - Bring window to front doesnt steal focus on java1.7 anymore</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-984'>SPARK-984</a>] - Should be an option to disable username color randomizer in MUC</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1254'>SPARK-1254</a>] - Select Spellchecker Language in Chatwindow</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1277'>SPARK-1277</a>] - Installer should include Java 1.6.0 (build 10) or higher</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1278'>SPARK-1278</a>] - Allow Nimbus Skinning </li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1303'>SPARK-1303</a>] - Preferences: Automatically join Groupchat (muc) on invite</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1323'>SPARK-1323</a>] - Allow larger VCard Images</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1334'>SPARK-1334</a>] - Add the login server as STUN server to spark.properties</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1335'>SPARK-1335</a>] - Spark should save received broadcast messages in the chat history</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1343'>SPARK-1343</a>] - Broadcast window covers whole screen if message is longer than {1*10^x , x∈R&gt;5} characters</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1346'>SPARK-1346</a>] - PluginLoader should get a &lt;minJava&gt;1.x.x_xx&lt;/minJava&gt; tag</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1347'>SPARK-1347</a>] - apple plugin needs configurable behaviour</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1348'>SPARK-1348</a>] - Make possible to set Join on startup from other interface</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1352'>SPARK-1352</a>] - Prevent messages from the server to be stored in Client history</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1354'>SPARK-1354</a>] - Force 32 bit execution on Mac Plattfom</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1358'>SPARK-1358</a>] - Reduce Filetransfer size in corporate environments</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1359'>SPARK-1359</a>] - Plugin Blacklist</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1369'>SPARK-1369</a>] - When debugger enabled should be able to send raw packets somehow</li>
+</ul>
+
+<h3>Bug Fixes</h3>
+<ul>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-791'>SPARK-791</a>] - Vcard cache not expiring</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1067'>SPARK-1067</a>] - System Look and Feel option should be using system theme highlighting colors</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1080'>SPARK-1080</a>] - IzPack uninstaller doesnt remove Spark entries from Programs and Features list</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1095'>SPARK-1095</a>] - Nested groups are not sorted by name</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1200'>SPARK-1200</a>] - Context menu doesn&#39;t show up in chat input area on Windows 7</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1207'>SPARK-1207</a>] - Linux version of Spark quits when doing logout</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1253'>SPARK-1253</a>] - Transport icons disappear after saving preferences</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1274'>SPARK-1274</a>] - Reverse alphabetical sorting of participants in the group chat</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1275'>SPARK-1275</a>] - contact add loses connection when no username provided</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1280'>SPARK-1280</a>] - Crtl-Backspace doe not work in Chat Windows</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1281'>SPARK-1281</a>] - Spark doesn&#39;t goes online after auto away when using Remote Desktop connection</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1283'>SPARK-1283</a>] - File transfer between 2.5.8 and 2.6.0_12222 is broken</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1294'>SPARK-1294</a>] - Spark 2.6 RC2 No Phone Call Button</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1324'>SPARK-1324</a>] - SparkToaster showing avatars in real size</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1325'>SPARK-1325</a>] - Spark File Transfer. Let spark find the right IP</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1331'>SPARK-1331</a>] - Spark-&gt;Preferences-&gt;Appearance: Null Pointer exception when no emoticon set is available</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1336'>SPARK-1336</a>] - NPE In getContactGroupByJID</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1338'>SPARK-1338</a>] - Spark 12384 is not starting with old profile</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1340'>SPARK-1340</a>] - Spark login profile picker doesn&#39;t show profiles with same names but different servers</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1350'>SPARK-1350</a>] - File transfer and windows network path</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1351'>SPARK-1351</a>] - Remove plugins does not remove plugins</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1357'>SPARK-1357</a>] - When in fullscreen mode and switching to smaller screen, spark doesnt rezise to fit smaller screen</li>
+</ul>
+
 <h2>2.6.0 -- <span style="font-weight: normal;">May 6th, 2011</span></h2>
 <h3>New Features</h3>
 <ul>
