updating readme and changelog.html for release on 17.06.11 updated rev# to 12491
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12491 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -178,9 +178,10 @@ hr {
 </div>
 
 <div id="pageBody">
-<h2>2.6.1 -- <span style="font-weight: normal;">June 20th, 2011</span></h2>
+<h2>2.6.1 -- <span style="font-weight: normal;">June 17th, 2011</span></h2>
 <h3> New Feature </h3>
 <ul>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-548'>SPARK-548</a>] - Animated GIFs as Avatars</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-884'>SPARK-884</a>] - OTR support for chat</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-948'>SPARK-948</a>] - Bring window to front doesnt steal focus on java1.7 anymore</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-984'>SPARK-984</a>] - Should be an option to disable username color randomizer in MUC</li>
@@ -226,6 +227,7 @@ hr {
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1350'>SPARK-1350</a>] - File transfer and windows network path</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1351'>SPARK-1351</a>] - Remove plugins does not remove plugins</li>
 <li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1357'>SPARK-1357</a>] - When in fullscreen mode and switching to smaller screen, spark doesnt rezise to fit smaller screen</li>
+<li>[<a href='http://issues.igniterealtime.org/browse/SPARK-1374'>SPARK-1374</a>] - Spark freezes on close</li>
 </ul>
 
 <h2>2.6.0 -- <span style="font-weight: normal;">May 6th, 2011</span></h2>
