updating changelog.html README.html and LICENSE.html, all look alike and are linked to each other
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12503 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -174,7 +174,7 @@ hr {
     <h1>Spark Changelog</h1>
 </div>
 <div class="navigation">
-    <a href="README.html">Readme</a>|<a href="changelog.html"><strong>Changelog</strong></a>|<a href="LICENSE.html">License</a>
+    <a href="README.html">Readme</a>|<a href="changelog.html">Changelog</a>|<a href="LICENSE.html">License</a>
 </div>
 
 <div id="pageBody">
@@ -886,7 +886,7 @@ hr {
 </ul>
 
 <div class="footer">
-    Copyright &copy; Jive Software, 2006-2007
+    Copyright &copy; Jive Software, 2006-2011
 </div>
 
 
